--- a/code/style.css
+++ b/code/style.css
@@ -7,7 +7,7 @@ html {
 /*HEADER*/
 
 .logo {
-    width: 70px;
+    width: 50px;
 }
 
 .header {
@@ -20,12 +20,23 @@ html {
 }
 
 .nav-item {
-    margin-top: 15px;
-    margin-right: 15px;
+    align-items: baseline;
+    margin-right: 30%;
+}
+
+.nav-item .last-child {
+    margin-right: 0px;
 }
 
 
-/*SECTION NEWS*/
+/*SECTION HEAD-NEWS*/
+
+.head-news {
+    display: flex;
+}
+
+
+/*SECTION BIG NEWS CONTAINER*/
 
 .news-card {
     width: 100%;
