--- a/code/style.css
+++ b/code/style.css
@@ -1,11 +1,11 @@
 html {
-  background: #fff;
   color: #000;
   font-family: 'Raleway', sans-serif;
 }
 
 body {
   margin: 0;
+  background-image: url("./pattern.png");
 }
 
 h1 {
@@ -14,12 +14,13 @@ h1 {
   letter-spacing: 4px;
 }
 
-/* h2 {     /* Add style?
-
-} */
+h2 {     
+  letter-spacing: 2px;
+}
 
 h3 {
   font-size: 16px;
+  letter-spacing: 2px;
 }
 
 
@@ -37,11 +38,39 @@ h3 {
 .logo {
   width: 30px;
   height: 30px;
-  margin-right: 10px;
+  margin-right: 20px;
 }
 
-.navigation, .social-media {
+.title {
+  text-decoration: none;
+} 
+
+.navigation {
   display: none;
+}
+
+.navigation.open-menu {
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  top: 70px;
+  left: 0;
+  background: #000;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  animation-name: menu-animation;
+  animation-duration: 0.5s;
+}
+
+@keyframes menu-animation {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: 0;
+  }
 }
 
 .navigation a {
@@ -51,17 +80,31 @@ h3 {
 }
 
 .navigation a:hover, .navigation a:focus {
-  color: rgb(189, 189, 189)
+  color: rgb(189, 189, 189);
 }
 
-.hamburger {          /*Add a drop down menu and script*/
-  width: 20px;
-  height: 20px;
+.social-media {
+  display: none;
+}
+
+.social-media a svg:hover {
+  fill: rgb(61, 61, 61);
+}
+
+.ham {
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  margin-right: 10px;
+}
+
+.hamburger {        
+  width: 30px;
+  height: 25px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-right: 10px;
-  margin-left: auto;
+  position: relative;
 }
 
 .hamburger div {
@@ -71,13 +114,36 @@ h3 {
   border-radius: 25%;
 }
 
+.close-menu div:nth-child(1) {
+  transform: rotate(135deg);
+  position: absolute;
+  top: 10px;
+  left: 0px;
+}
 
+.close-menu div:nth-child(2) {
+  display: none;
+}
+
+.close-menu div:nth-child(3) {
+  transform: rotate(-135deg);
+  position: absolute;
+  top: 10px;
+  left: 0px;
+}
 
 /*** RESPONSIVE IMAGE ***/
 
 .responsive-image {
   width: 100%;
   height: auto;
+}
+
+
+/*** ZOOM ON HOVER ***/
+
+.container:hover {
+  transform: scale(1.1);
 }
 
 
@@ -90,16 +156,16 @@ main {
 
 .big-news {
   padding: 0px;
-  border: 1px solid rgb(228, 225, 225);
-  background: #fff; 
-  box-shadow: 5px 5px #e7e6e6;
-  margin: 20px 0px;
 }
 
 .big-news .container {
   padding: 30px 16px;
   display: flex;
   flex-direction: column;
+  border: 1px solid rgb(228, 225, 225);
+  margin: 20px 0px;
+  background: #fff; 
+  box-shadow: 5px 5px #e7e6e6;
 }
 
 .big-news-text {
@@ -108,8 +174,13 @@ main {
 
 .big-news-text p {
   font-weight: bold;
+  letter-spacing: 2px;
 }
 
+.container a {
+  text-decoration: none;
+  color: #000;
+}
 
 /*** OTHER NEWS ***/
 
@@ -118,7 +189,7 @@ main {
   flex-direction: column;
 }
 
-.other-news .container {      /*Can I make the images in the other news section smaller? */
+.other-news .container {      /*Can I make the images in the other news section smaller than the big news image? */
   padding: 30px 16px;
   display: flex;
   flex-direction: column;
@@ -137,7 +208,6 @@ footer {
   width: 100%;
   margin: 0;
   padding-top: 20px;
-  margin-top: 40px;
 }
 
 footer a {
@@ -164,7 +234,7 @@ footer a {
 }
 
 .container-contact-info a:hover, .container-contact-info a:focus {
-  color: rgb(189, 189, 189)
+  color: rgb(189, 189, 189);
 }
 
 .container-social-media {
@@ -178,7 +248,11 @@ footer a {
 }
 
 .container-social-media a:hover, .container-social-media a:focus {
-  color: rgb(189, 189, 189)
+  color: rgb(189, 189, 189);
+}
+
+.container-social-media svg:hover {
+  fill: rgb(61, 61, 61);
 }
 
 
@@ -190,6 +264,10 @@ differently on this specific device */
   .header {
     justify-content: space-between;
   } 
+
+  .ham {
+    display: none;
+  }
 
   .navigation {
     display: inline-block;
@@ -229,9 +307,7 @@ differently on this specific device */
 
   .other-news .container {
     align-items: center;
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: 30%;  
+    flex: 1 1 30%;
     margin: 10px;
   }
 
@@ -249,7 +325,7 @@ tablet lies in the background */
 
   .other-news .container {
     align-items: center;
-    flex: 1 1 15%;
+    flex: 1 1 20%;
   }
 
 }
