--- a/code/style.css
+++ b/code/style.css
@@ -24,14 +24,21 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+.header-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .header {
   margin: 0;
-  width: 100%;
+  width: auto;
   display: grid;
-  justify-content: flex-start;
-  grid-template-columns: 150px 300px ;
+  justify-content: center;
+  grid-template-columns: 60px 246px ;
   grid-template-rows: 65px 67px;
   grid-template-areas: 
   "logo title1 title1"
@@ -39,18 +46,19 @@ body {
 }
 
 .logo {
-  width: 100px;
+  width: 60px;
   grid-area: logo;
-  padding: 15px;
-  margin: 10px 0 0 40px;
+  padding: 15px 0 0 0;
+  margin: 10px 0 0 0px;
+  justify-self: end;
 }
 
 h1.title-name {
-  width: 300px;
+  width: 230px;
   margin: 15px 0px 0px 10px;
   grid-area: title1;
   font-family: 'Love Ya Like A Sister', cursive;
-  font-size: 52px;
+  font-size: 40px;
 }
 
 h1.title-type {
@@ -90,19 +98,19 @@ section.small-news {
 
 
 .article {
-  width: 400px;
+  width: 320px;
   padding: 25px;
   margin-top: 15px;
   background-color: white;
   box-shadow: 5px 7px 10px;
-  font-size: 20px;
+  font-size: 17px;
 }
 
 figure.big-news {
   background-color: white;
-  width: 400px;
-  padding: 25px;
-  box-shadow: 5px 7px 10px;
+  width: 320px;
+  padding: 20px;
+  box-shadow: 4.5px 6px 9px;
 }
 
 @keyframes bounce {
@@ -124,10 +132,10 @@ figure.big-news {
 
 figure.small-news {
   background-color: white;
-  width: 400px;
-  padding: 25px; 
-  margin-bottom: 40px;
-  box-shadow: 5px 7px 10px;
+  width: 320px;
+  padding: 22px; 
+  margin-bottom: 36px;
+  box-shadow: 4.5px 6px 9px;
 }
 
 figure.small-news:hover {
@@ -136,15 +144,15 @@ figure.small-news:hover {
 
 .figcaption {
   font-family: 'Kalam', cursive;
-  font-size: 24px;
+  font-size: 22px;
 }
 
 img.big-news {
-  width: 350px;
+  width: 282px;
 }
 
 img.small-news {
-  width: 350px;
+  width: 282px;
 }
 
 .copyright {
@@ -227,6 +235,7 @@ transition: transform 1s;
 
 .title-name {
   display: none;
+  font-size: 36px;
 }
 
 section.big-news {
