--- a/code/style.css
+++ b/code/style.css
@@ -61,42 +61,42 @@ body {
 
 
 .container {
-  width: 280px;
-  margin: 20px auto;
+  width: 330px;
+  margin: 30px auto;
 
 }
 
 .polaroid {
   padding: 10px;
   background-color: white;
-  box-shadow: 0 0.2rem 1.2rem rgba(0,0,0,0.2);
+  box-shadow: 0 0.2rem 1.2rem rgba(0,0,0,0.3);
 }
 
+.title {
+  font-size: 17px;
+  text-transform: capitalize;
+}
 /** BIG NEWS **/
 
 .big-news .news-card {
   width: 100%;
-  height: 280px;
+  height: 500px;
   margin-bottom: 20px;
 }
 
 .big-news .news-card-pic {
   width: 100%;
-  /* height: 200px; */
 }
 
 .big-news-text {
   color: #000;
-  font-size: 12px;  
-  ;
+  font-size: 14px;
 }
-
 
 /** OTHER-NEWS **/
 
 .other-news .news-card {
   width: 100%;
-  height: 280px;
   margin-bottom: 20px;
 
 }
@@ -108,8 +108,6 @@ body {
 
 .news-card-text {
   font-size: 15px;
-  text-align:center;
-  margin: auto;
 }
 
 /** RESPONSIVENESS **/
@@ -128,27 +126,18 @@ body {
 
   .logo {
     order: -1;
-    margin-left:inherit;
-    margin-right: 10px;
+    margin-left: initial;
+    margin-right: 30px;
   }
 
   .navigation-container {
     display: flex;
     margin-left: auto;
   }
-
-  .big-news {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
   
   .big-news .news-card {
-    width: 45%;
-  }
-
-  .big-news-text {
-    text-align: center;
+    width: 100%;
+    height: 700px;
   }
 
   .other-news {
@@ -170,17 +159,25 @@ body {
     }
 
     .big-news .news-card {
-      width: 49%;
-      /* margin-right: 5px; */
+      width: 100%;
     }
 
-    .big-news-text {
-      font-size: 20px;
+    .big-news .news-card .polaroid {
+      display: flex;
+      width: 100%;
     }
 
-    .other-news .news-card {
-    width: 24.3%;
-    margin-right: 5px;
+    .big-news .news-card .polaroid .news-card-pic {
+      width: 50%;
+      margin-right: 20px;
+    }
+
+    .big-news .news-card {
+      height: 350px;
+    }
+
+      .other-news .news-card {
+      width: 24.3%;
     }
 
   }
