--- a/code/style.css
+++ b/code/style.css
@@ -156,9 +156,10 @@ nav {
   width: 100%;
   background-color: #8a7be7;
   text-align: center;
-  box-shadow: 12px 12px black;
+  /* box-shadow: 12px 12px black; */
   margin-bottom: 25px;
   transition: 0.5s ease;
+  border: 2px solid black;
 }
 
 .news-item:hover {
@@ -171,6 +172,9 @@ nav {
 
 .news-img {
   width: 100%;
+  height: 200px;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 .news-item-text {
