--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,6 @@
 html {
   background: white;
-  color: #ffffff
+  color: #f7f7f7
 }
 
 body {
@@ -9,9 +9,16 @@ body {
 }
 
 .header {
-  background-color: #070d59;
+  background-color: #3f3f44;
+}
+
+.mobile-tablet-view {
   display: flex;
   justify-content: space-between;
+}
+
+.navigation-container {
+  display: none;
 }
 
 .logo {
@@ -19,8 +26,8 @@ body {
   padding: 10px
 }
 
-.navigation-container {
-  display: flex;
+h1 {
+  margin-left: 15px;
 }
 
 .navigation-item {
@@ -31,8 +38,23 @@ a {
   text-decoration: none;
 }
 
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 24px 24px 24px 0;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background: #fff;
+}
+
 .big-news {
-  background-color: #1F3C88;
+  background-color: #cceabb;
   margin-bottom: 30px;
 }
  
@@ -42,7 +64,7 @@ a {
 }
 
 h1 {
-  color: #ee6f57;
+  color: #fdcb9e;
 }
 
 h2 {
@@ -62,6 +84,7 @@ h2 {
 .news-card {
   width: 90%;
   margin: 20px;
+  background-color: #fdcb9e;
   border: 1px solid black;
   padding-bottom: 20px;
   box-shadow: 7px 7px gray;
@@ -80,23 +103,19 @@ h2 {
 
 
 footer {
-  background-color: #070d59;
+  background-color: #3f3f44;
   padding: 20px;
 }
 
 @media (max-width: 767px) {
-  .header {
-    display: flex;
-    justify-content: flex-start;
-  }
-
-  .navigation-container {
+  h1 {
     display: none;
   }
 }
+/** for tablet **/
 
 @media (min-width: 768px) {
- .big-news {
+  .big-news {
     display: flex;
     flex-direction: row;
   }
@@ -118,8 +137,21 @@ footer {
   }
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
+  .hamburger {
+    display: none;
+  }
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .navigation-container {
+    display: flex;
+  }
   .news-card {
     width: 20%;
   }
 }
+
