--- a/code/style.css
+++ b/code/style.css
@@ -3,9 +3,9 @@ body {
 }
 .header {
   display: flex;
-  background: white;
+  background: #ffff;
   justify-content: space-between;
-  border-bottom: 2px dotted #000000;
+  border-bottom: 2px dotted #000; 
 }
 .hamburger {
   display: flex;
@@ -19,12 +19,9 @@ body {
 .hamburger-line {
   width: 30px;
   height: 5px;
-  background: black; 
+  background: rgb(0, 0, 0); 
   border-radius: 2px;
 } 
-.link {
-  display:none; 
-}
 .logo {
   width: 50px;
   padding: 5px; 
@@ -37,7 +34,7 @@ body {
   animation: fadeIn 5s; 
   font-size: 60px;
   font-weight: bold;
-  background-image: url("./");
+  background-image: url("./hero.jpg");
   background-position: center;
 }
 .hero-text {
@@ -54,9 +51,11 @@ body {
 h2 {
   margin-bottom: 0;
 }
-p {
-  font-size: 20px;
+.main-news > p {
+  font-size: 17px;
   padding: 20px;
+  background-color: #fbaec11d;
+  font-weight: 300;
 }
 .figure {
   margin: 5px;
@@ -69,14 +68,18 @@ p {
   padding-top:20px ;
 } 
 .image { 
-  background-color: white;
+  background-color: #ffff;
   margin-bottom: 20px;
   border: 1px solid whitesmoke;
-  padding: 15px 15px 65px 15px; /*depending on pics*/
+  padding: 15px 15px 65px 15px; 
   box-shadow: 5px 10px 10px rgb(169, 169, 169);
   overflow: hidden; 
-  height: 300px;
+  width: 75%;
 }  
+.image:hover {
+  transform: rotate(-10deg);
+  transition: all 0.3s ease;
+}
 .image1, .image2, .image3, .image4, .image5,.image6, .image7, .image8 {
   width: 100%;
 }
@@ -85,12 +88,18 @@ figcaption {
   text-align: center; 
   font-size: 20px;
 } 
-footer > p {
-  text-indent: 20px; 
+.footer > p {
+  font-size: 15px;
 } 
 
 /*** MEDIA QUERIES ***/
 
+/*** MOBILE ***/
+@media (max-width:768px) { 
+  .link {
+    display:none; 
+  }
+}
 /*** TABLET ***/
 @media (min-width:768px) { 
   .hamburger {
@@ -107,9 +116,10 @@ footer > p {
     display: inline;
     text-decoration: none; 
     font-weight: bold;
-    color:black;
+    color:#000000;
     transition-duration: 0.4s;
     padding-right: 15px;
+    font-size: 15px;
   } 
   .link:hover {
     color: #0625ff; 
@@ -118,10 +128,12 @@ footer > p {
   .image-container {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content:center;
+    justify-content: center;
   }
   .image {
     margin: 20px;
+    width: 35%;
+    
   }
 }
 /*** LAPTOP ***/
@@ -129,21 +141,9 @@ footer > p {
   .image-container {
     justify-content: space-between;
   }
-} 
-/*** WIDESCREEN ***/
-@media (min-width:1200px) {
-  .header{
-    justify-content: center;
-  }
-  .hero-text {
-    font-size: 80px;
-  }
-  p{
-   margin: auto;
-  }
-  .image-container {
-    justify-content: center;
-    padding:auto ;
+  .image {
+    margin: 5px;
+    width: 20%; 
   }
 } 
 
