--- a/code/style.css
+++ b/code/style.css
@@ -18,7 +18,6 @@ header {
   width: 100%;
   display: flex;
   flex-flow: wrap;
-  padding: 0 16px;
   border-top: 25px solid #f75590;
   border-bottom: 25px solid #f75590;
   
@@ -37,7 +36,8 @@ header {
   height: 30px;
   flex-direction: column;
   justify-content: space-between;
-  
+  align-self: flex-start;
+  padding: 16px 16px;  
 }
 
 .hamburger div {
@@ -47,13 +47,13 @@ header {
 }
 
 .left .logo img {
-  width: 80%;
+  width: 100%;
   margin-left: .5rem;
   
 }
 
 .left .nameplate img {
-  width: 90%;
+  width: 100%;
   margin-right: 2rem;
 }
 
@@ -112,15 +112,64 @@ ul {
 /***MEDIA QUERIES***/
 
 /***MOBILE***/
-@media only screen and (max-width: 420px) {
 
-  
+@media (min-width 360px) and (max-width 667px) {
 
+   .left {
+    display: none;
+  }
+
+  .middle {
+    display: flex;
+  }
+
+  .right {
+    display: none;
+  }
+
+  .lower-menu {
+    display: none;
+}
 
 }
 
 
+
+
 /***TABLET***/
+
+@media (min-width: 667px) and (max-width: 1024px) {
+
+  .left .hamburger {
+    display: none;
+
+  }
+  .middle {
+    display: none;
+  }
+
+  .right {
+    display: none;
+  }
+}
+  
 
 /***DESKTOP***/
 
+@media (min-width: 1024px) {
+
+  header {
+    display: flex;
+  }
+
+    .left .hamburger {
+    display: none;
+  }
+
+  .middle {
+    display: none;
+  }
+
+}
+
+  
