--- a/code/style.css
+++ b/code/style.css
@@ -12,6 +12,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
+  position: sticky;
   width: 100%;
   height: 50px;
 }
@@ -82,6 +83,7 @@ body {
 .navigation-container {
   display: flex;
   justify-content: space-between;
+  position: sticky;
   align-items: center;
   width: 100%;
   height: 50px;
