--- a/code/style.css
+++ b/code/style.css
@@ -5,11 +5,11 @@ html {
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .header {
-  background-color: #3f3f44;
+  background-color: #23232e;
 }
 
 .mobile-tablet-view {
@@ -36,6 +36,7 @@ h1 {
 
 a {
   text-decoration: none;
+  color:cornflowerblue;
 }
 
 .hamburger {
@@ -47,6 +48,7 @@ a {
   margin: 24px 24px 24px 0;
 }
 
+
 .hamburger div {
   width: 30px;
   height: 5px;
@@ -54,7 +56,7 @@ a {
 }
 
 .big-news {
-  background-color: #cceabb;
+  background-color: #6b7296;
   margin-bottom: 30px;
 }
  
@@ -64,7 +66,7 @@ a {
 }
 
 h1 {
-  color: #fdcb9e;
+  color: #b6c5e6;
 }
 
 h2 {
@@ -77,17 +79,18 @@ h2 {
 }
 
 .other-news {
-  text-align: center;
   color: black;
 }
 
 .news-card {
   width: 90%;
   margin: 20px;
-  background-color: #fdcb9e;
+  background-color: white;
   border: 1px solid black;
-  padding-bottom: 20px;
+  border-radius: 5px;
   box-shadow: 7px 7px gray;
+  padding: 30px;
+  text-align: justify;
   transition: transform .3s;
 }
 
@@ -97,13 +100,12 @@ h2 {
 
 .news-card img {
   width: 100%;
-  height: 200px;
   object-fit: cover;
 }
 
 
 footer {
-  background-color: #3f3f44;
+  background-color: #23232e;
   padding: 20px;
 }
 
@@ -151,7 +153,7 @@ footer {
     display: flex;
   }
   .news-card {
-    width: 20%;
+    width: 22%;
   }
 }
 
