--- a/code/style.css
+++ b/code/style.css
@@ -1,23 +1,23 @@
+/* Site background*/
 html {
   background-color: #F0EEE9;
-}
-
+  }
 
 /* header & it's content*/
 
 .header-container {
   display: flex;
-  flex-wrap: wrap;
-     
+  flex-wrap: wrap; 
   }
+
 .header-logo {
   min-width: 50%;
   max-height: 150px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  
 }
+
 .navigation {
   display: flex;
   flex-wrap: wrap;
@@ -26,23 +26,22 @@ html {
   width: 100%;
   margin-top: 10px;
   border-bottom: 2px groove #CF5C78;   
-  
   }
+
 .nav-link {
   text-decoration: none;
   text-transform: uppercase;
   padding: 10px;
   font-family: 'Concert One', cursive;
   font-size: 16px;
-    }
+  }
 
   /* Hover effect on navigation text*/
   .nav-link:hover {
     color: #CF5C78;
   }
 
-  /* Big news section & it's content*/
-
+/* Big news section & it's content*/
 .big-news-section {
   display: flex;
   flex-direction: column;
@@ -51,8 +50,7 @@ html {
   font-size: 38px;
 }
 
-   /* Other news section & it's content*/
-
+/* Other news section & it's content*/
   .other-news-section {
     display: flex;
     flex-direction: column;
@@ -70,7 +68,7 @@ html {
   .other-news-section {
     flex-direction: row;
     flex-wrap: wrap;
-    } 
+  } 
 }
 @media (min-width: 667px) and (max-width: 1024px) {
   .polaroid {
@@ -82,7 +80,7 @@ html {
   .other-news-section {
     flex-direction: row;
     flex-wrap: wrap;
-    } 
+  } 
 }
 @media (min-width: 1025px) {
   .polaroid {
@@ -90,7 +88,7 @@ html {
   }
 }
 
-/* Polaroid effect, box-shadow */
+/* Polaroid effect, box-shadow credit hover effect */
 
   .polaroid-big {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -112,7 +110,6 @@ html {
 
 
   /* footer styles */
-
   .footer {
     display: flex;
     justify-content: center;
