--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,150 @@
-html {
-  background: #0025ff;
-  color: #fff;
+
+main, header, section, aside, footer {
+  margin: 0;
+  padding: 20px;
+  border: none;
+  color: dimgray;
+  text-align: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 24px;
+/*     border: 1px solid #000000; */
+}
+
+main {
+  background: #C8D2D8;
+
+}
+
+.header {
+  background: #708A9D;
+}
+
+.news-card {
+  display: flex;
+  flex-direction: row;
+  width: auto;
+  height: 310px;
+  margin-bottom: 20px;
+}
+
+.style {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  }
+
+@media screen and (min-width: 768px){
+  .flex-container {
+      display: flex;
+  }    
+
+  .news-card {
+      display: flex;
+      flex-direction: row;
+      width: auto;
+  }
+
+  .content {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+  }
+}
+
+.hero {
+  background-color: #FFF0F5;
+  background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url("https://images.unsplash.com/photo-1603354350317-6f7aaa5911c5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+  background-size: cover;
+}
+
+a:hover{
+  font-weight:italic;
+  }
+
+a{
+  text-decoration:none;
+  color: dimgray;
+}
+
+.content {
+  flex: 1;
+  background: #C8D2D8;
+}
+
+.sidebar {
+  flex: 0 1 300px;
+  background: #C8D2D8;
+}
+
+.wrapper {
+  margin: auto;
+  max-width: 1200px;
+}
+
+.hero {
+  max-width: 1160px;
+}
+
+.box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.navigation {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.nav-element {
+  margin-right: 20px;
+}
+
+.nav-element:last-child {
+  margin-right: 0;
+}
+
+.logo {
+  width: 100px;
+}
+
+.footer {
+  background: #708A9D;
+  padding: 20px;
+  color: dimgray;
+}
+
+.content img {
+  margin-left: none;
+  margin-right: none;
+  width: 250px;     
+  height: 250px;
+  overflow: hidden;
+}
+
+.polaroid {
+position: relative;
+width: 300px;
+}
+
+.polaroid img {
+border: 10px solid #fff;
+border-bottom: 55px solid #fff;
+-webkit-box-shadow:3px 3px 3px #777;
+   -moz-box-shadow:3px 3px 3px #777;
+        box-shadow:3px 3px 3px #777;
+}
+
+.polaroid p {
+position: absolute;
+text-align: center;
+width: 100%;
+bottom: 0px;
+font: 400 18px/1 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+color: dimgray;
+}
+
+.content img:hover{
+  box-shadow: 5px 10px 5px 5px rgba(56, 54, 54, 0.2);
 }
