--- a/code/style.css
+++ b/code/style.css
@@ -38,6 +38,10 @@ body {
   font-size: 20px;
 }
 
+.top-heading:hover {
+  color: pink;
+}
+
 .logo {
   width: 40px;
   order: 1;
@@ -55,7 +59,7 @@ body {
 }
 
 .navigation-item:hover {
-  color: yellow;
+  color: pink;
 }
 
 .container {
@@ -74,7 +78,7 @@ a {
   }
 
 .news-type:hover {
-  color:  rgba(95, 158, 160);
+  color:  pink;
   }
 
  .news-type .type {
@@ -113,6 +117,10 @@ a {
   font-size: 12px;
   margin-right: 10px;
   margin-top: 20px;
+}
+
+.footer-link:hover{
+  color: pink;
 }
 
 /** BIG NEWS **/
